--- a/AHTP/Web.config
+++ b/AHTP/Web.config
@@ -14,17 +14,16 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=TruckingDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-          providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=TruckingDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
     <authentication mode="Forms"><!--add user authentication to application-->
-      <forms loginUrl="~/login.aspx" defaultUrl="~/Home/Index" />
+      <forms loginUrl="~/Login.aspx" defaultUrl="~/Home/Index" />
     </authentication>
     <authorization>
-      <deny users="?"/><!--will deny anonymous users-->
+      <deny users="?" /><!--will deny anonymous users-->
     </authorization>
   </system.web>
   <runtime>
