--- a/AHTP/Web.config
+++ b/AHTP/Web.config
@@ -15,7 +15,7 @@
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=TruckingDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="TruckingDatabaseEntities" connectionString="metadata=res://*/Models.AndersonDB.csdl|res://*/Models.AndersonDB.ssdl|res://*/Models.AndersonDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\MSSQLLocalDB;initial catalog=TruckingDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
