Renamed the views index vievbag title to reflect the respective names of what each page will display.  Also added an mage to the home page :-)

--- a/AHTP/AHTP.csproj
+++ b/AHTP/AHTP.csproj
@@ -293,6 +293,7 @@
     <Content Include="Content\images\ui-icons_ffffff_256x240.png" />
     <Content Include="Content\img\ajax-loaderm.gif" />
     <Content Include="Content\img\ajax-loader.gif" />
+    <Content Include="Content\img\haulage.jpg" />
     <Content Include="Content\jquery-ui.css" />
     <Content Include="Content\jquery-ui.structure.css" />
     <Content Include="Content\jquery-ui.theme.css" />
